--- a/apps/tool/templates/tool/regex.html
+++ b/apps/tool/templates/tool/regex.html
@@ -36,7 +36,7 @@
 {% block end_f %}
 <script>
 $('#start-re').click(function() {
-	regex_api("{{ csrf_token }}", "{% url 'tool:regex_api' %}");
+	regex_api("{{ csrf_token }}", "{% url 'tool:regex' %}");
 })
 
 </script>
