--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -13,61 +13,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8" style="line-height:2">
-            <div class="card rounded-0 border-0 p-3 f-16">
-                <h2 class="font-weight-bold">关于网站</h2>
-                <hr style="margin: .1rem;dashed #333;"/>
-                <ul class="pl-4 ml-2">
-                    <li>网站已经成功续航 {{ site_date|timesince }}</li>
-                    <li>本网站是一个个人博客网站，主要分享博主的编程学习心得</li>
-                    <li>网站主要使用 django + mysql + redis + nginx 搭建，部署方式由最开始的虚拟化部署变成 docker 容器化，源码在博主 Github 中， 目前部署在阿里云 ECS</li>
-                    <li>我的目的是让这个博客网站不仅仅是一个博客，所以会尽己所能持续扩展网站的功能</li>
-                    <li>请各位使用了我博客源码作为您自己的博客网站支持的同学在自己博客上线后给一个注明，指向我的 Github 博客项目的地址，谢谢！</li>
-                </ul>
-                <h2 class="mt-2 font-weight-bold">关于博主</h2>
-                <hr style="margin: .1rem;dashed #333;"/>
-                <ul class="pl-4 ml-2">
-                    <li>人生苦短，我用 Python！</li>
-                    <li>博主是2015年末开始自学 Python 的，在第一次接触到 Python 的时候就爱上了这门编程语言，所以主攻 Python，顺带学习其他编程语言，目前从事的工作主要偏向于运维，主要使用 shell 和 Python</li>
-                    <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫框架，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
-                        的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy 做数据分析
-                    </li>
-                    <li>Linux 技能树：ansible 自动化部署及运维、常用 shell 命令及脚本编写、docker 及 docker-compose 容器化技术</li>
-                    <li>数据库技能树：常用 MySQL 作为 web 后端数据库，MongoDB 作为爬虫信息存储，Redis 用作缓存，熟悉常规的 CURD 操作</li>
-                    <li>前端技能树：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
-                    <li>博主 Github 地址：<a href="https://github.com/Hopetree"
-                                        target="_blank">https://github.com/Hopetree</a></li>
-                    <li>联系邮箱：zlwork2014@163.com</li>
-                </ul>
-                <h2 class="mt-2 font-weight-bold">功能介绍</h2>
-                <hr style="margin: .1rem;dashed #333;"/>
-                <ul class="pl-4 ml-2">
-                    <li>Django 自带的后台管理系统，方便对于文章、用户及其他动态内容的管理</li>
-                    <li>文章分类、标签、浏览量统计以及规范的 SEO 设置</li>
-                    <li>用户认证系统，在 Django 自带的用户系统的基础上扩展 Oauth2.0 认证，支持微博、Github 等第三方认证</li>
-                    <li>文章评论系统，炫酷的输入框特效，支持 markdown 语法，二级评论结构和回复功能</li>
-                    <li>信息提醒功能，登录和退出提醒，收到评论和回复提醒，信息管理</li>
-                    <li>强大的全文搜索功能，只需要输入关键词就能展现全站与之关联的文章</li>
-                    <li>RSS 博客订阅功能及规范的 Sitemap 网站地图</li>
-                    <li>django-redis 支持的缓存系统，遵循缓存原则，加速网站打开速度</li>
-                    <li>实用的在线工具，实现在线爬虫的接口调用</li>
-                    <li>友情链接和推荐工具网站的展示</li>
-                    <li>RESTful API 风格的 API 接口</li>
-                </ul>
-                <h2 class="mt-2 font-weight-bold">网站支持</h2>
-                <hr style="margin: .1rem;dashed #333;"/>
-                <ul class="pl-4 ml-2">
-                    <li>前端使用 Bootstrap4 + jQuery 支持响应式；图标使用 Font Awesome</li>
-                    <li>后端 Python 3.5.2，Django 1.11.12，其他依赖查看源码中 requirements.txt</li>
-                    <li>后台数据库使用 MySQL，缓存数据库使用 Redis</li>
-                    <li>网站部署使用 docker</li>
-                    <li>bootstrap-admin 用于美化后台管理系统，变成响应式界面</li>
-                    <li>django-allauth 等用于第三方用户登录</li>
-                    <li>django-haystack 和 jieba 用于支持全文搜索</li>
-                    <li>django-redis 缓存</li>
-                    <li>使用 django restframework 支持的 RESTful 风格的 API 接口</li>
-                    <li>其他依赖查看网站源码解释</li>
-                </ul>
-            </div>
+            <div class="card rounded-0 border-0 p-3 f-16">{{ body|safe }}</div>
         </div>
         <div class="col-lg-4">
             {% include 'blog/tags/base_right.html' %}
