--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -46,6 +46,10 @@
                     </div>
                     <div class="article-body mt-4 f-17" style="line-height:1.8">
                         {{ article.body|safe }}
+                        <blockquote class="p-1" style="border-left: 4px solid #dc3545;">
+                            <p class="m-1"><strong>版权声明：</strong>如无特殊说明，文章均为本站原创，转载请注明出处</p>
+                            <p class="m-1"><strong>本文链接：</strong>{{ request.build_absolute_uri }}</p>
+                        </blockquote>
                     </div>
                     <div class="tag-cloud my-4">
                         {% for tag in article.tags.all %}
