--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -48,7 +48,7 @@
                         {{ article.body|safe }}
                         <blockquote class="p-1 f-14" style="border-left: 4px solid #dc3545;">
                             <p class="m-1"><strong>版权声明：</strong>如无特殊说明，文章均为本站原创，转载请注明出处</p>
-                            <p class="m-1"><strong>本文链接：</strong>{{ request.build_absolute_uri }}</p>
+                            <p class="m-1"><strong>本文链接：</strong>{{ site_url }}{{ article.get_absolute_url }}</p>
                         </blockquote>
                     </div>
                     <div class="tag-cloud my-4">
