--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -65,6 +65,21 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:docker_search' %}">
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/docker.png' %}"
+                             alt="Docker镜像查询">
+                        <h2 class="card-title">Docker镜像查询</h2>
+                    </a>
+                    <p class="mb-0">[开发工具]</p>
+                </div>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">查询官方镜像仓库中指定镜像的版本信息，帮助开发人员更准确的选择合适的镜像</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
+            <div class="card">
+                <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:useragent' %}">
                         <img class="w-25 float-left mr-2" src="{% static 'blog/img/chrome.png' %}"
                              alt="User-Agent生成器">
