修改docker search 工具

--- a/apps/tool/templates/tool/docker_search.html
+++ b/apps/tool/templates/tool/docker_search.html
@@ -15,6 +15,7 @@
         <li>本工具调用docker镜像仓库官方接口，查询官方镜像仓库中指定镜像的版本信息</li>
         <li>解决痛点：经常需要从官方镜像仓库拉取镜像的开发者都知道，镜像千千万，版本天天变，对于不熟悉的镜像，如何准确地选择正确的镜像版本成了一个问题，而这个工具就可以实时查询官方仓库中镜像的版本信息，方便开发人员选择镜像</li>
         <li>使用须知：官方镜像仓库中的镜像也分官方维护的镜像和第三方维护的镜像，当第三方是软件本身的维护者的时候，选择第三方维护的镜像是更优的选择</li>
+        <li>由于官方镜像仓库是外网，所以查询可能出现超时的现象，如果超时请重试，本工具对常用镜像的查询结果会缓存24小时</li>
     </ul>
 </div>
 <div class="mb-3">
