--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -1,4 +1,4 @@
-{% load static oauth_tags comment_tags %}
+{% load static oauth_tags blog_tags comment_tags %}
 <nav class="navbar navbar-expand-md bg-white fixed-top blog-navbar py-md-0">
     <a class="navbar-brand d-md-none d-lg-block" href="{% url 'blog:index' %}">
         <img src="{% static 'blog/img/logo.png' %}" alt="{{ site_end_title }}">
@@ -20,7 +20,8 @@
             {% if tool_flag %}
             <li class="nav-item mr-2">
                 {% url 'tool:total' as tool_url %}
-                <a class="nav-link py-md-3 {% if request.path == tool_url %}active{% endif %}" href="{{ tool_url }}"><i class="fa fa-balance-scale mr-1"></i>在线工具</a>
+                {% a_startswith_b request.path tool_url as check_flag %}
+                <a class="nav-link py-md-3 {% if check_flag %}active{% endif %}" href="{{ tool_url }}"><i class="fa fa-balance-scale mr-1"></i>在线工具</a>
             </li>
             {% endif %}
             {% if api_flag %}
