--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -23,6 +23,11 @@
                 <a class="nav-link py-md-3 {% if request.resolver_match.namespace == 'tool' %}active{% endif %}" href="{{ tool_url }}"><i class="fa fa-balance-scale mr-1"></i>在线工具</a>
             </li>
             {% endif %}
+            {% if hao_flag %}
+            <li class="nav-item mr-2 d-none d-lg-block">
+                <a class="nav-link py-md-3" href="https://hao.tendcode.com"><i class="fa fa-chrome mr-1"></i>轻巧导航</a>
+            </li>
+            {% endif %}
             {% if api_flag %}
             <li class="nav-item mr-2">
                 <a class="nav-link py-md-3" href="{% url 'api:api-root' %}" target="_blank"><i class="fa fa-key mr-1"></i>API</a>
