--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -25,7 +25,7 @@
             {% endif %}
             {% if hao_flag %}
             <li class="nav-item mr-2 d-none d-lg-block">
-                <a class="nav-link py-md-3" href="https://hao.tendcode.com"><i class="fa fa-chrome mr-1"></i>轻巧导航</a>
+                <a class="nav-link py-md-3" href="https://hao.tendcode.com" target="_blank"><i class="fa fa-chrome mr-1"></i>轻巧导航</a>
             </li>
             {% endif %}
             {% if api_flag %}
