添加文章页面图片点击预览

--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -11,6 +11,9 @@
     margin-right: auto;
     margin-left: auto;
 }
+.article-body img:hover {
+    cursor:pointer;
+}
 .codehilite pre {
     border: none;
     background-color: #e4eaef;
