添加文章页面图片点击预览

--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -103,11 +103,7 @@
 <div class="modal fade" id="img-to-big" tabindex="-1" role="dialog" aria-labelledby="img-to-bigTitle"
      aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document" style="max-width: 80%">
-        <div class="modal-content">
-            <div class="modal-body" style="padding: .5rem;">
-                <img alt="image" style="max-width: 100%">
-            </div>
-        </div>
+        <img class="rounded mx-auto d-block" alt="image">
     </div>
 </div>
 {% endblock %}
