change code css

--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -14,7 +14,7 @@
 <link href="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet">
 {% endif %}
 <link href="{% static 'blog/css/detail.css' %}?v=20190728.056" rel="stylesheet">
-<link href="{% static 'blog/css/github-colorful.css' %}?v=20180102.130" rel="stylesheet">
+<link href="{% static 'blog/css/monokai.css' %}?v=20190910.2" rel="stylesheet">
 <link href="{% static 'comment/css/base_comment.css' %}?v=20190114.554" rel="stylesheet">
 {% endblock %}
 
