--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -67,15 +67,19 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
 <footer class="container-fluid mt-4 py-0">
     <div class="card-body text-center px-0 f-14">
         <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-<span id="year-info"></span>
-            <script>function getnewYear(){var d = new Date();var x = document.getElementById("year-info");
-            x.innerHTML=d.getFullYear();}getnewYear()</script>
             <a href="https://github.com/Hopetree" target="_blank" title="博客作者的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
         </p>
         <p class="mb-0">
             <a href="http://www.miibeian.gov.cn/" target="_blank">{{ beian }}</a>&nbsp;|
             <a href="{% url 'django.contrib.sitemaps.views.sitemap' %}" target="_blank">Sitemap</a>
             {% if cnzz_protocol %}|&nbsp;{{ cnzz_protocol|safe }}{% endif %}
+            <span id="web-day"></span>
         </p>
+        <script>function getnewYear(){var d = new Date();var old = new Date('2018/03/28');
+            var x = document.getElementById("year-info");
+            x.innerHTML=d.getFullYear();var y=document.getElementById("web-day");
+            var dd=Math.floor((d.getTime() - old.getTime()) / (24 * 3600 * 1000));
+            var d_str="| 网站已续航 "+dd+" 天";y.innerHTML=d_str;}getnewYear()</script>
     </div>
 </footer>
 </body>
