--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -19,9 +19,9 @@
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="{% static 'blog/js/headroom.min.js'%}"></script>
     <!-- blog CSS -->
-    <link href="{% static 'blog/css/base.css' %}?v=20190908.05" rel="stylesheet">
+    <link href="{% static 'blog/css/base.css' %}?v=20190908.05500" rel="stylesheet">
     {% block top-file %}{% endblock %}
-    <link href="{% static 'blog/css/night.css' %}?v=20190908.090" rel="stylesheet">
+    <!--<link href="{% static 'blog/css/night.css' %}?v=20190908.090" rel="stylesheet">-->
 </head>
 <body>
 <!--导航开始-->
