--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -19,9 +19,8 @@
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="{% static 'blog/js/headroom.min.js'%}"></script>
     <!-- blog CSS -->
-    <link href="{% static 'blog/css/base.css' %}?v=20190908.05500" rel="stylesheet">
+    <link href="{% static 'blog/css/base.css' %}?v=20191123.0568" rel="stylesheet">
     {% block top-file %}{% endblock %}
-    <link href="{% static 'blog/css/night.css' %}?v=20190908.090" rel="stylesheet">
 </head>
 <body>
 <!--导航开始-->
@@ -52,12 +51,14 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<!--js cookie 插件-->
+<script src="{% static 'blog/js/js.cookie.min.js'%}?v=20191123.12"></script>
 <script src="https://cdn.bootcss.com/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script>
 $(function(){var myElement=document.querySelector(".blog-navbar");var headroom=new Headroom(myElement);headroom.init()});
 </script>
-<script src="{% static 'blog/js/base.js'%}?v=20180429.15"></script>
+<script src="{% static 'blog/js/base.js'%}?v=20191123.090"></script>
 {% if user.is_authenticated %}
 <script>
 var msgs = {% get_notifications_count user 'false' %};
