--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -21,6 +21,10 @@
     <!-- blog CSS -->
     <link href="{% static 'blog/css/base.css' %}?v=20191123.0568" rel="stylesheet">
     {% block top-file %}{% endblock %}
+    <!--根据cookies判断是否启用暗色主题-->
+    {% if request.COOKIES.toggleTheme == "dark" %}
+    <link id="theme-css-dark" href="/static/blog/css/night.css?20191123.01" rel="stylesheet">
+    {% endif %}
 </head>
 <body>
 <!--导航开始-->
@@ -58,7 +62,7 @@
 <script>
 $(function(){var myElement=document.querySelector(".blog-navbar");var headroom=new Headroom(myElement);headroom.init()});
 </script>
-<script src="{% static 'blog/js/base.js'%}?v=20191123.090"></script>
+<script src="{% static 'blog/js/base.js'%}?v=20191123.0909890"></script>
 {% if user.is_authenticated %}
 <script>
 var msgs = {% get_notifications_count user 'false' %};
