--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -5,7 +5,8 @@
 <div class="card border-0 rounded-0 px-3 mb-2 mb-md-3 d-none d-lg-block" id="home-card">
     <div class="card-header bg-white px-0">
         <strong><i class="fa fa-paper-plane mr-2 f-17"></i>个人空间</strong>
-        <img class="float-right" id="theme-img" src="{% static 'blog/img/toggle-light.png' %}"
+        <img class="float-right" id="theme-img"
+             src="{% if request.COOKIES.toggleTheme == 'dark' %}{% static 'blog/img/toggle-dark.png' %}{% else %}{% static 'blog/img/toggle-light.png' %}{% endif %}"
              alt="theme-toggle" title="切换主题">
     </div>
     <div class="card-body px-0 pt-3 pb-1">
