modify some head info,thanks Hotpetree a lot

--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 {% load blog_tags %}
 
-{% block head_title %}Tend to Code_一个使用django和bootstrap搭建的个人博客{% endblock %}
+{% block head_title %}CloudIslands{% endblock %}
 {% block metas %}
     <meta name="description" content="{{ site_description }}">
     <meta name="keywords" content="{{ site_keywords }}">
