--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -4,7 +4,7 @@
 {% block head_title %}关于网站，网站及博主介绍{% endblock %}
 {% block metas %}
 <meta name="description"
-      content="本网站是一个采用django+bootstrap4搭建的个人博客，本着学习和分享的精神，博客项目开源，源代码可以到我的Github中查看，网站建站历程可以查看页面Timeline内容。">
+      content="本网站是一个采用django+bootstrap4搭建的个人博客，本着学习和分享的精神，博客项目开源，源代码可以到作者Github中查看，网站建站历程可以查看页面Timeline内容。">
 <meta name="keywords" content="网站About页面,关于网站,关于博主,关于站长">
 {% endblock %}
 
