--- a/apps/blog/templates/blog/timeline.html
+++ b/apps/blog/templates/blog/timeline.html
@@ -9,7 +9,7 @@
 {% block head_title %}网站建站历程，查看博客搭建Timeline时间轴{% endblock %}
 {% block metas %}
 <meta name="description"
-      content="本网站是一个采用django+bootstrap4搭建的个人博客，本着学习和分享的精神，博客项目开源，源代码可以到我的Github中查看，网站建站历程可以查看页面Timeline内容。">
+      content="本网站是一个采用django+bootstrap4搭建的个人博客，本着学习和分享的精神，博客项目开源，源代码可以到作者Github中查看，网站建站历程可以查看页面Timeline内容。">
 <meta name="keywords" content="Timeline时间轴,个人博客建站日志">
 {% endblock %}
 
