--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -44,6 +44,7 @@
                         <span class="mx-2">阅读 {{ article.views }}</span>
                         <a class="mx-2 to-com" href="#comment-block">评论 {% get_comment_count article %}</a>
                     </div>
+                    {% include 'ad/kaikeba/2020_04_12.html' %}
                     <div class="article-body mt-4 f-17" style="line-height:1.8">
                         {{ article.body|safe }}
                         <blockquote class="p-1 f-14" style="border-left: 4px solid #dc3545;">
