--- a/apps/tool/templates/tool/docker_search.html
+++ b/apps/tool/templates/tool/docker_search.html
@@ -22,7 +22,7 @@
     <div class="form-group">
         <label>输入镜像名称：</label>
         <input type="url" class="form-control rounded-0" id="image-name"
-               placeholder="例：nginx 或者 jenkins/jenkins"
+               placeholder="例：nginx 或者 hopetree/izone"
                required>
         <small class="form-text text-muted">注：nginx 为官方维护的镜像；jenkins/jenkins 是 Jenkins 维护的镜像，比官方维护的更好</small>
     </div>
