--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% load static %}
 {% load humanize %}
-{% load blog_tags %}
+{% load blog_tags tool_tags%}
 
 {% block head_title %}在线工具，提升工作效率{% endblock %}
 {% block metas %}
@@ -17,111 +17,10 @@
 {% block base_content %}
 <div class="container">
     <div class="row tool-list">
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:markdown_editor' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'editor/images/logos/editormd-logo-96x96.png' %}"
-                             alt="Markdown编辑器">
-                        <h2 class="card-title">Markdown编辑器</h2>
-                    </a>
-                    <p class="mb-0">[办公工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">基于开源项目 Editor.md 的在线 markdown 编辑器，拥有强大的编辑能力和全面的语法支持</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/baidu-2.png' %}"
-                             alt="百度主动推送工具">
-                        <h2 class="card-title">百度主动推送工具</h2>
-                    </a>
-                    <p class="mb-0">[站长工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送接口批量提交链接，提升网站收录效率，老站必备</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push_site' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/map.png' %}"
-                             alt="Sitemap主动推送">
-                        <h2 class="card-title">Sitemap主动推送</h2>
-                    </a>
-                    <p class="mb-0">[站长工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">抓取Sitemap页面所有链接，调用百度主动推送接口，主动批量提交网站链接，新站必备</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:regex' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/regex.png' %}"
-                             alt="在线正则表达式">
-                        <h2 class="card-title">在线正则表达式</h2>
-                    </a>
-                    <p class="mb-0">[开发工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">正则表达式在线工具，使用正则表达式的规则提取信息，所有语言规则通用</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:docker_search' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/docker.png' %}"
-                             alt="Docker镜像查询">
-                        <h2 class="card-title">Docker镜像查询</h2>
-                    </a>
-                    <p class="mb-0">[开发工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">查询官方镜像仓库中指定镜像的版本信息，帮助开发人员更准确的选择合适的镜像</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:useragent' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/chrome.png' %}"
-                             alt="User-Agent生成器">
-                        <h2 class="card-title">User-Agent生成器</h2>
-                    </a>
-                    <p class="mb-0">[爬虫工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">网页请求头在线生成器，自动生成各种平台和浏览器的请求头User-Agent</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:html_characters' %}">
-                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/html.png' %}"
-                             alt="HTML特殊字符对照表">
-                        <h2 class="card-title">HTML特殊字符</h2>
-                    </a>
-                    <p class="mb-0">[开发工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">HTML常用字符查询表，HTML特殊字符对照表</p>
-                </div>
-            </div>
-        </div>
+        {% get_toollist_by_key as tool_list %}
+        {% for tool_item in tool_list %}
+        {% load_tool_item tool_item %}
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
