修改回到顶部新图片

--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -48,9 +48,7 @@
 {% endif %}
 
 <!--回到顶部按钮-->
-<div class="text-center" id="to-top">
-    <i class="fa fa-chevron-up" id="btn-top" title="回到顶部"></i>
-</div>
+<div class="text-center" id="to-top" title="回到顶部"></div>
 
 <!--主要内容块-->
 <main>{% block base_content %}{% endblock %}</main>
