--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -49,6 +49,7 @@
                         <blockquote class="p-1 f-14" style="border-left: 4px solid #dc3545;">
                             <p class="m-1"><strong>版权声明：</strong>如无特殊说明，文章均为本站原创，转载请注明出处</p>
                             <p class="m-1"><strong>本文链接：</strong>{{ site_url }}{{ article.get_absolute_url }}</p>
+                            <p class="m-1"><strong>许可协议：</strong><a href="https://creativecommons.org/licenses/by-nc/4.0/">署名-非商业性使用 4.0 国际许可协议</a></p>
                         </blockquote>
                     </div>
                     <div class="tag-cloud my-4">
