--- a/apps/tool/templates/tool/tags/tool_list.html
+++ b/apps/tool/templates/tool/tags/tool_list.html
@@ -1,5 +1,25 @@
 {% load tool_tags %}
 
+{% if not request.user.is_superuser %}
+{% get_toollist_by_key as tool_list %}
+<div class="card border-0 rounded-0 px-3 mb-2 mb-md-3 tool-cate">
+    <div class="card-header bg-white px-0">
+        <strong><i class="fa fa-trophy mr-2 f-17"></i>自定义工具</strong>
+    </div>
+    <div class="card-body px-0 py-3">
+        <div class="tool-list">
+            {% for tool in tool_list %}
+            <div class="w-50 float-left text-center mb-2">
+                <div class="mx-2 bg-info text-white tool-link-text">
+                    <a class="mx-1" href="{{ tool.url }}" title="{{ tool.desc }}">{{ tool.name }}</a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+{% endif %}
+
 {% get_toolcates as cates %}
 {% for each_cate in cates %}
 <div class="card border-0 rounded-0 px-3 mb-2 mb-md-3 tool-cate">
