--- a/apps/tool/templates/tool/word_cloud.html
+++ b/apps/tool/templates/tool/word_cloud.html
@@ -29,7 +29,7 @@
     <div class="form-group">
         <label>请输入待统计词频的文本：</label>
         <textarea class="form-control rounded-0" id="form-text" rows="8" required></textarea>
-        <label class="mb-2 mt-2">输入停用词（可选，每行一个）：</label>
+        <label class="mb-2 mt-2">输入停用词（可选，每行一个，输入 \d+ 表示停用所有纯数字）：</label>
         <textarea class="form-control rounded-0" id="stop-text" rows="4"></textarea>
     </div>
 
