--- a/apps/tool/templates/tool/word_cloud.html
+++ b/apps/tool/templates/tool/word_cloud.html
@@ -31,7 +31,7 @@
         <textarea class="form-control rounded-0" id="form-text" rows="8" required></textarea>
         <label class="mb-2 mt-2">输入停用词（选填，每行一个）：</label>
         <textarea class="form-control rounded-0" id="stop-text" rows="4"
-                  placeholder="特殊约定：num- 表示停用所有纯数字，less- 表示停用长度为1的词"></textarea>
+                  placeholder="特殊约定：num- 表示停用所有纯数字，single- 表示停用长度为1的词"></textarea>
     </div>
 
     <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-wc">生成词云图</button>
