--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -6,7 +6,16 @@
     <div class="card-header bg-white px-0">
         <strong><i class="fa fa-paper-plane mr-2 f-17"></i>个人空间</strong>
         <img class="float-right" id="theme-img"
-             src="{% if request.COOKIES.toggleTheme == 'dark' %}{% static 'blog/img/toggle-dark.png' %}{% else %}{% static 'blog/img/toggle-light.png' %}{% endif %}"
+        {% if not request.COOKIES.toggleTheme %}
+            {% now_hour as hour %}
+            {% if hour < 6 or hour > 18 %}
+            src="{% static 'blog/img/toggle-dark.png' %}"
+            {% endif %}
+        {% elif request.COOKIES.toggleTheme == "dark" %}
+             src="{% static 'blog/img/toggle-dark.png' %}"
+        {% else %}
+             src="{% static 'blog/img/toggle-light.png' %}"
+         {% endif %}
              alt="theme-toggle" title="切换主题">
     </div>
     <div class="card-body px-0 pt-3 pb-1">
